2005-07-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (List.add_list): Remove selection,
	GtkTreeView is different from a GtkCList, if this turns out to be
	a problem we'll rewrite/readd this code.
	(List.get_column_by_name): New method
	(List.__init__): require a list or column, tuples are not allowed

2005-07-12  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (List.__contains__): Clean up, 
	use == instead of is
	(List.__setitem__, List.__getitem__): Support strings, refactor
	(List.__iter__): Impl.
	(List.get_selected, List.get_selected_rows): Separate, mimic gtk+
	closely.
	(List.__init__): Select first item in list if we selection is allowed
	and we're inserting a list.

2005-07-11  Johan Dahlin  <jdahlin@async.com.br>

	* examples/completion.py:
	* gazpacho-plugin/kiwi2.xml: 
	* kiwi/ui/widgets/entry.py:

	Add entry completion support and a small example.

== 1.9.0 released ==
2005-06-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/__init__.py: Kill pygtk.require() it won't be missed since 
	all systems which we can run on has pygtk 2.x installed as default. 
	Should also speed up imports.

	* kiwi/__init__.py:
	* kiwi/environ.py:
	* kiwi/interfaces.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/libgladeloader.py:
	* kiwi/ui/loader.py:
	* kiwi/ui/views.py:

	Kill loader. Move glade/imagepath handling to kiwi.environ.
	Move abstract adaptor to kiwi.interfaces

2005-06-28  Johan Dahlin  <jdahlin@async.com.br>

	* README:
	* kiwi/__init__.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/libgladeloader.py:
	* kiwi/ui/loader.py:
	* kiwi/ui/views.py:

	How much I hate this, but: Write a libglade loader to use as fallback
	when gazpacho cannot be found. Add a hook to require gazpacho.

2005-06-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/views.py: Allow us to function without a broker.

	* kiwi/ui/gadgets.py:
	* kiwi/ui/widgets/label.py:
	* kiwi/ui/widgets/proxy.py:
	* kiwi/utils.py:
